--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,8 @@
-server:
-  port: 9000
-
 spring:
   application:
     name: ms-loan
   datasource:
+#    platform: postgres
     url: ${URL_DATABASE:jdbc:postgresql://localhost:5432/library_db}
     username: postgres
     password: postgres
@@ -16,3 +14,8 @@ spring:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQL81Dialect
+server:
+  port: 8990
+  
+key: ABCDabcd1234
+
