--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: ms-loan
   datasource:
-    url: ${URL_DATABASE:jdbc:postgresql://localhost:5432/library}
+    url: ${URL_DATABASE:jdbc:postgresql://localhost:5432/library_db}
     username: postgres
-    password: abcd1234
+    password: postgres
   jpa:
     hibernate:
       ddl-auto: update
